--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -55,6 +55,7 @@
   // Border radius
   --border-radius-base: 0.25rem;
   --border-radius-xs: 0.3rem;
+  --border-radius-xsx: 0.4rem;
   --border-radius-sm: 0.5rem;
   --border-radius-md: 0.75rem;
   --border-radius-lg: 1rem;
