--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -36,6 +36,13 @@
   --secondary-hover: #a47f1a0b;
   --secondary-fade: #80631520;
 
+  /* Extra colors */
+  --blue-primary: #002f85;
+  --blue-fade: #0027702f;
+
+  --purple-primary: #2e007d;
+  --purple-fade: #27006a31;
+
   /* Gradient-speficic values */
 
   // For gradient primary
@@ -88,6 +95,13 @@
   --secondary-text: #cc9d1b;
   --secondary-hover: #cc9d1b08;
   --secondary-fade: #87691620;
+
+  /* Extra colors */
+  --blue-primary: #a5c1f5;
+  --blue-fade: #00277040;
+
+  --purple-primary: #b494ea;
+  --purple-fade: #1a004640;
 
   /* Gradient-speficic values */
 
