--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -17,8 +17,8 @@
   --neutral-button: #535353;
   --neutral-button-lighter: #474747;
   --neutral-space: #efefef;
-  --neutral-extra: #f6efed;
-  --neutral-extra-dark: #e4d4d1;
+  --neutral-extra: #f1f1f1;
+  --neutral-extra-dark: #e4e4e4;
 
   /* Primary colors variations */
   --primary-one: #800000;
