--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -98,7 +98,7 @@
         <ng-container matColumnDef="day">
           <th mat-header-cell *matHeaderCellDef class="custom-header">Day</th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            {{ element.day || "Not set" }}
+            <span [class.not-set-badge]="element.day === 'Not set'">{{ element.day }}</span>
           </td>
         </ng-container>
 
@@ -106,7 +106,7 @@
         <ng-container matColumnDef="time">
           <th mat-header-cell *matHeaderCellDef class="custom-header">Time</th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            {{ element.time || "Not set" }}
+            <span [class.not-set-badge]="element.time === 'Not set'">{{ element.time }}</span>
           </td>
         </ng-container>
 
@@ -116,7 +116,7 @@
             Professor
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            {{ element.professor || "Not set" }}
+            <span [class.not-set-badge]="element.professor === 'Not set'">{{ element.professor }}</span>
           </td>
         </ng-container>
 
@@ -124,7 +124,7 @@
         <ng-container matColumnDef="room">
           <th mat-header-cell *matHeaderCellDef class="custom-header">Room</th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            {{ element.room || "Not set" }}
+            <span [class.not-set-badge]="element.room === 'Not set'">{{ element.room }}</span>
           </td>
         </ng-container>
 
