--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
@@ -68,3 +68,10 @@
     }
   }
 }
+
+.not-set-badge {
+  background-color: var(--primary-fade);
+  color: var(--primary-text);
+  padding: var(--spacing-xxs) var(--spacing-xs);
+  border-radius: var(--border-radius-xs);
+}
