--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -136,6 +136,10 @@ span[mat-symbol] {
   width: var(--dialog-small);
 }
 
+// .mat-mdc-header-cell {
+//   border-bottom-color: transparent !important;
+// }
+
 .mat-calendar-body-selected {
   color: white !important;
 }
