--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -43,6 +43,9 @@
   --purple-primary: #2e007d;
   --purple-fade: #27006a31;
 
+  --green-primary: #005a09;
+  --green-fade: #00461933;
+
   /* Gradient-speficic values */
 
   // For gradient primary
@@ -102,6 +105,9 @@
 
   --purple-primary: #b494ea;
   --purple-fade: #1a004640;
+
+  --green-primary: #97d39d;
+  --green-fade: #00461940;
 
   /* Gradient-speficic values */
 
