--- a/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
@@ -1,3 +1,6 @@
+@if (isLoading) {
+<app-loading></app-loading>
+} @else {
 <!-- Table Header -->
 <div class="curriculum-header-container" [@fadeAnimation]>
   <app-table-header
@@ -14,19 +17,17 @@
 </div>
 
 @if (showPreview) {
-  <div class="pdf-preview-container">
-    <button mat-button (click)="cancelPreview()">Cancel Preview</button>
-    <iframe id="pdfPreview" width="100%" height="600px"></iframe>
-  </div>
+<div class="pdf-preview-container">
+  <button mat-button (click)="cancelPreview()">Cancel Preview</button>
+  <iframe id="pdfPreview" width="100%" height="600px"></iframe>
+</div>
 }
 
-@if (loading) {
-<app-loading></app-loading>
-} @else {
+<!-- Curriculum Detail -->
 <div class="curriculum-detail-container">
   @for (semester of selectedSemesters; track semester.semester; let i = $index)
   {
-  <div class="semester-container" [@pageFloatUpAnimation]>
+  <div class="semester-container" [@fadeAnimation]>
     <app-table-generic
       [columns]="columns"
       [data]="semester.courses"
