add ui improvements

--- a/frontend/src/app/core/components/admin/main/main.component.scss
+++ b/frontend/src/app/core/components/admin/main/main.component.scss
@@ -98,7 +98,7 @@
 .sidenav-content {
   @include flex-layout($direction: column, $gap: var(--spacing-md));
   min-height: 100%;
-  padding: var(--spacing-lg) var(--spacing-lg) var(--spacing-lg) 0;
+  padding: var(--spacing-lg);
   box-sizing: border-box;
 
   .main-toolbar {
@@ -201,6 +201,8 @@
     padding: var(--spacing-lg);
     overflow: auto;
     width: 100%;
+
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
 
     &.reports-view {
       padding: var(--spacing-lg) var(--spacing-lg) var(--spacing-xs)
