--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
@@ -63,6 +63,7 @@
         color: var(--primary-text);
         padding: var(--spacing-xxs) var(--spacing-xs);
         border-radius: var(--border-radius-xs);
+        text-wrap: nowrap;
       }
 
       .edit-button {
