incerease badge contrast

--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
@@ -60,7 +60,7 @@
 
       .not-set-badge {
         background-color: var(--primary-fade);
-        color: var(--primary-text);
+        color: var(--primary-text-lighter);
         padding: var(--spacing-xxs) var(--spacing-xs);
         border-radius: var(--border-radius-xs);
         text-wrap: nowrap;
