--- a/frontend/src/app/shared/table-generic/table-generic.component.scss
+++ b/frontend/src/app/shared/table-generic/table-generic.component.scss
@@ -75,7 +75,7 @@
     }
     
     .status-inactive {
-      color: var(--primary-text);
+      color: var(--primary-text-lighter);
       background-color: var(--primary-fade);
     }
   }
