--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -25,6 +25,7 @@
   --primary-two: #a93232;
   --primary-fade: #80000020;
   --primary-text: #800000;
+  --primary-text-lighter: #710303;
   --primary-hover: #e3d9d9;
   --primary-warning: #bb1f1f;
 
@@ -88,6 +89,7 @@
   --primary-two: #9e2525;
   --primary-fade: #a932321a;
   --primary-text: #e15d5d;
+  --primary-text-lighter: #f08383;
   --primary-hover: #2b2121;
   --primary-warning: #ffb4ab;
 
