create custom progress bar

--- a/frontend/src/app/shared/loading/loading.component.html
+++ b/frontend/src/app/shared/loading/loading.component.html
@@ -1,4 +1,7 @@
 <div class="loading-container">
   <p>Loading, please wait...</p>
-  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+  <div class="custom-progress-bar">
+    <div class="progress-animation primary"></div>
+    <div class="progress-animation secondary"></div>
+  </div>
 </div>
