--- a/frontend/src/app/shared/loading/loading.component.scss
+++ b/frontend/src/app/shared/loading/loading.component.scss
@@ -3,8 +3,58 @@
 .loading-container {
   @include flex-layout($direction: column);
   height: 100%;
+  align-items: center;
+}
 
-  mat-progress-bar {
-    max-width: 50%;
+.custom-progress-bar {
+  width: 50%;
+  height: var(--font-size-tiny);
+  background-color: var(--neutral-light);
+  border-radius: var(--border-radius-sm);
+  overflow: hidden;
+  position: relative;
+}
+
+.progress-animation {
+  @include gradient-primary(90deg);
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: var(--border-radius-sm);
+  animation: primary-progress-animation 3s infinite;
+
+  &.secondary {
+    animation: secondary-progress-animation 2s infinite;
+  }
+}
+
+@keyframes primary-progress-animation {
+  0% {
+    left: -35%;
+    right: 100%;
+  }
+  60% {
+    left: 100%;
+    right: -90%;
+  }
+  100% {
+    left: 100%;
+    right: -90%;
+  }
+}
+
+@keyframes secondary-progress-animation {
+  0% {
+    left: -200%;
+    right: 100%;
+  }
+  60% {
+    left: 107%;
+    right: -8%;
+  }
+  100% {
+    left: 107%;
+    right: -8%;
   }
 }
