--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -19,7 +19,8 @@
   // Typography
   --font-base: "Inter Tight", "Helvetica Neue", sans-serif;
   --font-header: "Trajan Pro", serif;
-
+  
+  --font-size-tiny: 0.4rem;
   --font-size-xs: 0.65rem;
   --font-size-xsx: 0.8rem;
   --font-size-sm: 0.875rem;
