--- a/frontend/src/app/shared/dialog-time/dialog-time.component.scss
+++ b/frontend/src/app/shared/dialog-time/dialog-time.component.scss
@@ -16,15 +16,19 @@
   }
 }
 
+.dialog-content {
+  padding: var(--spacing-lg);
+}
+
 .dialog-field {
   width: 100%;
 }
 
-.cancel span {
-  color: var(--primary-text);
+.cancel {
+  color: var(--primary-text) !important;
 }
 
-.confirm span {
+.confirm {
   color: white;
 }
 
