minor ui changes

--- a/frontend/src/app/core/components/admin/overview/overview.component.scss
+++ b/frontend/src/app/core/components/admin/overview/overview.component.scss
@@ -18,6 +18,7 @@
     background-color: var(--admin-bg);
     border-radius: var(--border-radius-sm);
     padding: var(--spacing-md);
+    box-shadow: var(--shadow-level-1);
   }
 
   .card-title {
