--- a/frontend/src/app/core/components/admin/main/main.component.scss
+++ b/frontend/src/app/core/components/admin/main/main.component.scss
@@ -201,8 +201,7 @@
     padding: var(--spacing-lg);
     overflow: auto;
     width: 100%;
-
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+    box-shadow: var(--shadow-level-0);
 
     &.reports-view {
       padding: var(--spacing-lg) var(--spacing-lg) var(--spacing-xs)
